--- a/dealgen/ba-dealgen.cabal
+++ b/dealgen/ba-dealgen.cabal
@@ -18,11 +18,13 @@ common warnings
 executable ba-dealgen
     import:           warnings
     main-is:          Main.hs
-    -- other-modules:
+    other-modules:    Structs
     -- other-extensions:
     build-depends:    base ^>=4.21.0.0
                     , fixed-vector
+                    , microlens
     hs-source-dirs:   src
     extra-lib-dirs:   .
     extra-libraries:  dds
     default-language: GHC2024
+    default-extensions: TemplateHaskell
