parser processing all files in directory at once

--- a/parse/ba-parse.cabal
+++ b/parse/ba-parse.cabal
@@ -22,6 +22,9 @@ executable ba-parse
     -- other-extensions:
     build-depends:    base ^>=4.21.0.0
                     , aeson
+                    , containers
+                    , directory
+                    , filepath
                     , text
     hs-source-dirs:   src
     default-language: GHC2024
