--- a/parse/ba-parse.cabal
+++ b/parse/ba-parse.cabal
@@ -11,6 +11,7 @@ category:           Data
 build-type:         Simple
 -- extra-doc-files:    CHANGELOG.md
 -- extra-source-files:
+data-files:         schema.sql
 
 common warnings
     ghc-options: -Wall
@@ -19,10 +20,7 @@ executable ba-parse
     import:           warnings
     main-is:          Main.hs
     other-modules:    JsonTypes
-                    , HcpScoreCorr
-                    , PlayerHcpAverages
-                    , PlayersByMPs
-                    , Utils
+                    , Paths_ba_parse
     default-extensions: DerivingVia
                       , DuplicateRecordFields
                       , NoFieldSelectors
@@ -36,5 +34,7 @@ executable ba-parse
                     , directory
                     , filepath
                     , text
+                    , direct-sqlite
+                    , resourcet
     hs-source-dirs:   src
     default-language: GHC2024
