--- a/downloader/tsconfig.json
+++ b/downloader/tsconfig.json
@@ -4,8 +4,8 @@
     "module": "nodenext",
     "moduleResolution": "nodenext",
     "lib": ["esnext", "DOM", "DOM.Iterable"],
-    "outDir": "dist",
-    "rootDir": "src",
+    "outDir": "../dist-npm",
+    "rootDir": ".",
     "strict": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
